create includes for have clean code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= pageTitle %></title>
-</head>
-<body>
+<%- include('./includes/header.ejs') %>
+<div class="container"> 
     <h1> وبلاگ ساده من </h1>
-</body>
-</html>
+    <span class="fa fa-plus"></span>
+    <button class="btn btn-primary"> ali </button>
+    <button class="btn btn-danger">cli</button>
+</div>
+<%- include('./includes/footer.ejs') %>
