update index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,1 @@
-<div class="container"> 
-    <h1> وبلاگ ساده من </h1>
-    <span class="fa fa-plus"></span>
-    <button class="btn btn-primary"> ali </button>
-    <button class="btn btn-danger">cli</button>
-</div>
+<%- include('./includes/navbar.ejs') %>
