add action to login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <main class="form-signin w-100 m-auto">
-    <form>
+    <form accept="/users/login" method="post">
     <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal"> ورود به بخش مدیریت </h1>
 
