edit some codes in front of app in register and login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
     <div class="form-floating">
         <label for="floatingInput"> آدرس ایمیل </label>
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" class="form-control mb-2" id="floatingInput" placeholder="name@example.com">
     </div>
     <div class="form-floating">
         <label for="floatingPassword"> کلمه عبور </label>
