--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,6 +39,6 @@
         <a href="/users/login"> اکانت کاربری دارم </a>
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit"> ورود </button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit"> ثبت نام </button>
   </form>
 </main>
