edit register page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
     <h1 class="h3 mb-3 fw-normal"> ثبت نام کاربر </h1>
 
     <div class="form-floating">
-        <label for="inputFullname"> نام و نام خانوادگی </label>
+        <!-- <label for="inputFullname"> نام و نام خانوادگی </label> -->
         <input  class="form-control mb-2" id="inputFullname" placeholder=" نام و نام خانوادگی خود را وارد کنید ... "
         name="fullname" 
         required
@@ -12,14 +12,14 @@
         >
     </div>
     <div class="form-floating"> 
-        <label for="floatingInput"> آدرس ایمیل </label>
+        <!-- <label for="floatingInput"> آدرس ایمیل </label>  -->
         <input type="email" class="form-control mb-2" id="floatingInput" placeholder="name@example.com"
         required
         name="email"
         >
     </div>
     <div class="form-floating">
-        <label for="floatingPassword"> کلمه عبور </label>
+        <!-- <label for="floatingPassword"> کلمه عبور </label>  -->
         <input type="password" class="form-control mb-2" id="floatingPassword" placeholder=" کلمه عبور "
         required
         name="password"
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-floating">
-        <label for="inputConfirmPassword"> تکرار کلمه عبور </label>
+        <!-- <label for="inputConfirmPassword"> تکرار کلمه عبور </label>  -->
         <input type="password" class="form-control" id="inputConfirmPassword" placeholder=" تکرار کلمه عبور "
         name="confirmPassword"
         required
