--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
     <form action="/users/register" method="post">
     <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal"> ثبت نام کاربر </h1>
-
+    <%- include("./includes/messages.ejs") %>
     <div class="form-floating">
         <!-- <label for="inputFullname"> نام و نام خانوادگی </label> -->
         <input  class="form-control mb-2" id="inputFullname" placeholder=" نام و نام خانوادگی خود را وارد کنید ... "
