edit to close error alert in register page

--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -15,5 +15,7 @@
 </head>
 <body class="rtl">
     <%- body %>
+    <script src="/js/jquery.slim.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
