--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,44 +1,45 @@
-<main class="form-signin w-100 m-auto">
-    <form action="/users/register" method="post">
-    <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-    <h1 class="h3 mb-3 fw-normal"> ثبت نام کاربر </h1>
-    <%- include("./includes/messages.ejs") %>
-    <div class="form-floating">
-        <!-- <label for="inputFullname"> نام و نام خانوادگی </label> -->
-        <input  class="form-control mb-2" id="inputFullname" placeholder=" نام و نام خانوادگی خود را وارد کنید ... "
-        name="fullname" 
-        required
-        autofocus
-        >
-    </div>
-    <div class="form-floating"> 
-        <!-- <label for="floatingInput"> آدرس ایمیل </label>  -->
-        <input type="email" class="form-control mb-2" id="floatingInput" placeholder="name@example.com"
-        required
-        name="email"
-        >
-    </div>
-    <div class="form-floating">
-        <!-- <label for="floatingPassword"> کلمه عبور </label>  -->
-        <input type="password" class="form-control mb-2" id="floatingPassword" placeholder=" کلمه عبور "
-        required
-        name="password"
-        >
-    </div>
-
-    <div class="form-floating">
-        <!-- <label for="inputConfirmPassword"> تکرار کلمه عبور </label>  -->
-        <input type="password" class="form-control" id="inputConfirmPassword" placeholder=" تکرار کلمه عبور "
-        name="confirmPassword"
-        required
-        >
-    </div>
-
-    <div class="checkbox mb-3">
+<form class="form-signin" action="/users/register" method="POST">
+  <h1 class="h3 mb-3 font-weight-normal">ثبت نام کاربر</h1>
+  <%- include("./includes/messages.ejs") %>
+  <label for="inputFullname" class="sr-only">نام و نام خانوادگی</label>
+  <input
+      id="inputFullname"
+      type="fullname"
+      name="fullname"
+      class="form-control mb-2"
+      placeholder="نام و نام خانوادگی"
+      autofocus
+  />
+  <label for="inputEmail" class="sr-only">آدرس ایمیل</label>
+  <input
+      type="email"
+      name="email"
+      id="inputEmail"
+      class="form-control mb-2"
+      placeholder="آدرس ایمیل"
+  />
+  <label for="inputPassword" class="sr-only">کلمه عبور</label>
+  <input
+      type="password"
+      name="password"
+      id="inputPassword"
+      class="form-control mb-2"
+      placeholder="کلمه عبور"
+  />
+  <label for="inputConfirmPassword" class="sr-only">تکرار کلمه عبور</label>
+  <input
+      type="password"
+      name="confirmPassword"
+      id="inputConfirmPassword"
+      class="form-control"
+      placeholder="تکرار کلمه عبور"
+  />
+  <div class="checkbox mb-3">
       <label>
-        <a href="/users/login"> اکانت کاربری دارم </a>
+          <a href="/users/login">اکانت کاربری دارم</a>
       </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit"> ثبت نام </button>
-  </form>
-</main>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">
+      ثبت نام
+  </button>
+</form>
