--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/bootstrap-rtl.css">
-    <link rel="stylesheet" href="/css/font-awesome.css">
-    <% if(path === "/login" || path === "/register"){ %>
-        <link rel="stylesheet" href="/css/signin.css">
-        <% } %> 
-    <title><%= pageTitle %></title>
-</head>
-<body class="rtl">
-    <%- body %>
-    <script src="/js/jquery.slim.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="/css/bootstrap-rtl.css" />
+        <link rel="stylesheet" href="/css/font-awesome.css" />
+        <% if(path === "/login" || path === "/register"){ %>
+        <link rel="stylesheet" href="/css/signin.css" />
+        <% } %>
+        <title><%= pageTitle %></title>
+    </head>
+    <body class="rtl">
+        <%- body %>
+        <script src="/js/jquery.slim.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+    </body>
 </html>
