--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -10,6 +10,9 @@
         <% if(path === "/login" || path === "/register"){ %>
         <link rel="stylesheet" href="/css/signin.css" />
         <% } %>
+        <% if(path === "/404") {%>
+            <link rel="stylesheet" href="/css/404.css" />
+            <% } %>
         <title><%= pageTitle %></title>
     </head>
     <body class="rtl">
