--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <form class="form-signin" action="/users/login" method="POST">
   <h1 class="h3 mb-3 font-weight-normal">ورود به بخش مدیریت</h1>
+  <%- include("./includes/loginMessages.ejs") %>
   <label for="inputEmail" class="sr-only">آدرس ایمیل</label>
   <input
       type="email"
