update this file for authentication

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
   <label for="inputEmail" class="sr-only">آدرس ایمیل</label>
   <input
       type="email"
+      name="email"
       id="inputEmail"
       class="form-control mb-2"
       placeholder="آدرس ایمیل"
@@ -13,6 +14,7 @@
   <label for="inputPassword" class="sr-only">کلمه عبور</label>
   <input
       type="password"
+      name="password"
       id="inputPassword"
       class="form-control"
       placeholder="کلمه عبور"
